Update notebooks and dockerfile

--- a/ArtinKernelFormulas.ipynb
+++ b/ArtinKernelFormulas.ipynb
@@ -55,9 +55,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the simplicial graph $\\Gamma$ (with set of vertices $V$), we construct the right-angled Artin group $G_\\Gamma$, having as generators the vertices and as relations the commutators of vertices connected by an edge. We fix a character $\\chi:G_\\Gamma\\to\\mathbb{Z}$; the integers $\\chi(v)$ are encoded in the above list `L`. The character is *non-resonant*, i.e., $\\chi(v)\\neq 0, \\forall v\\in V$, and in fact witout loss of generality we always take them positive. Let $A^\\chi:=\\ker\\chi$.\n",
+    "Given the simplicial graph $\\Gamma$ (with set of vertices $V$), we construct the right-angled Artin group $A_\\Gamma$, having as generators the vertices and as relations the commutators of vertices connected by an edge. We fix a character $\\chi:A_\\Gamma\\to\\mathbb{Z}$; the integers $\\chi(v)$ are encoded in the above list `L`. The character is *non-resonant*, i.e., $\\chi(v)\\neq 0, \\forall v\\in V$, and in fact witout loss of generality we always take them positive. Let $A^\\chi:=\\ker\\chi$.\n",
     "\n",
-    "The homology $H_k(A^\\chi;\\KK)$ has a natural structure of $\\Lambda$-module, $\\Lambda:=\\KK[t^{\\pm 1}]$, and its computation is the main goal of the work. This homology is relate to flag or clique complex $\\cF$ of $\\Gamma$. We construct it for the example. To be cautious we set $\\mathcal{F}$ as `immutable`. In this example the picture of $\\Gamma$ allows to understand $\\cF$."
+    "The homology $H_k(A^\\chi;\\KK)$ has a natural structure of $\\Lambda$-module, $\\Lambda:=\\KK[t^{\\pm 1}]$, and its computation is the main goal of the work. This homology is related to the flag or clique complex $\\cF$ of $\\Gamma$. We construct it for the example. To be cautious we set $\\mathcal{F}$ as `immutable`. In this example the picture of $\\Gamma$ allows to understand $\\cF$."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since $\\Lambda$ is a euclidean domain, and the homology is a finitely generated $\\Lambda$-module. The torsion structure is very particular, see <a href=\"https://doi.org/10.1016/j.aim.2008.09.008\">Papadima and Suci</a>:\n",
+    "Since $\\Lambda$ is a euclidean domain, and the homology is a finitely generated $\\Lambda$-module, the torsion structure is very particular, see <a href=\"https://doi.org/10.1016/j.aim.2008.09.008\">Papadima and Suci</a>:\n",
     "$$\n",
     "H_{k+1}(A^\\chi;\\mathbb{K})\\cong\\Lambda^{r_k}\\oplus\\bigoplus_{d,j\\in\\NN}\\left(\\frac{\\Lambda}{\\langle\\Phi_d^j\\rangle}\\right)^{r_{k,j}(d)}.\n",
     "$$\n",
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us compute the rest of the torsion. We have to deal with the values divisors $d$ of the values $\\chi(v)$. In our example, the only needed value is $d=2$. We define a weight $\\omega:V\\to\\{0,1\\}$, such that $\\omega(v)=0$ if and only if $d$ is not a divisor of $\\chi(v)$. This weight extends to the simplicial complex $\\cF$.\n",
+    "Let us compute the rest of the torsion. We have to deal with the divisors $d$ of the values $\\chi(v)$. In our example, the only needed value is $d=2$. We define a weight $\\omega:V\\to\\{0,1\\}$, such that $\\omega(v)=0$ if and only if $d$ is not a divisor of $\\chi(v)$. This weight extends additively to the simplicial complex $\\cF$.\n",
     "\n",
     "\n",
     "The following cell computes a dictionnary `multis` which shows the multiplicity of any simplex in $\\cF$."
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We denote The $k$-skeleton $\\mathcal{F}^k$ of $\\mathcal{F}$ is needed. The function `esqueletos` provides a dictionnary with all the skeletons of $\\mathcal{F}$. We keep in `F_esq` the skeletons of the example."
+    "We denote the $k$-skeleton $\\mathcal{F}^k$ of $\\mathcal{F}$. The function `esqueletos` provides a dictionnary with all the skeletons of $\\mathcal{F}$. We keep in `F_esq` the skeletons of the example."
    ]
   },
   {
@@ -683,23 +683,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 1, 2, 3)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "U[0,0].vertices()"
+    "From these output we can recover the $\\Lambda$-module structure of the homology and check the above computations."
    ]
   },
   {
